--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .card:hover{transform:none;box-shadow:var(--shadow1)}
 .log-list .card{--row-bg:transparent;position:relative;margin:0;background:transparent;border:0;border-bottom:1px solid var(--border);border-radius:var(--log-card-radius);box-shadow:none;overflow:visible;transition:border-color var(--dur) var(--ease);flex:0 0 auto}
 .log-list .card:first-child{border-top:1px solid var(--border)}
-.log-list .card::before{content:"";position:absolute;top:-1px;bottom:-1px;left:-1px;pointer-events:none;border-left:3px solid transparent;border-top-left-radius:var(--log-card-radius);border-bottom-left-radius:var(--log-card-radius);transition:border-color var(--dur) var(--ease);z-index:1}
+.log-list .card::before{content:"";position:absolute;top:-1px;bottom:-1px;left:-1px;pointer-events:none;border-left:3px solid transparent;border-top-left-radius:var(--log-card-radius);border-bottom-left-radius:var(--log-card-radius);box-shadow:inset 0 0 0 0 #eef1f7;opacity:0;transition:border-color var(--dur) var(--ease),box-shadow var(--dur) var(--ease),opacity var(--dur) var(--ease);z-index:1}
 .log-list .card::after{content:"";position:absolute;top:-1px;right:-1px;bottom:-1px;left:-1px;background:var(--row-bg);pointer-events:none;transition:background var(--dur) var(--ease),border-color var(--dur) var(--ease);z-index:0;border-radius:var(--log-card-radius);border:3px solid transparent;border-left:0}
 .log-list .card>*{position:relative;z-index:1}
 .log-list .card:hover{--row-bg:rgba(15,23,42,.03)}
@@ -197,10 +197,10 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-list .card.editing .card-hd{background:var(--row-bg,#f1f5f9)}
 .log-list .card.editing{--row-bg:rgba(241,245,249,.9)}
 .log-list .card.open::before,
-.log-list .card.editing::before{top:0;right:0;bottom:0;left:0;border-left:none;border-radius:var(--log-card-radius);box-shadow:inset 3px 0 0 #eef1f7}
-.log-list .card .card-hd{padding:14px 20px;display:flex;align-items:flex-start;gap:16px;min-height:0}
+.log-list .card.editing::before{top:0;right:0;bottom:0;left:0;border-left:none;border-radius:var(--log-card-radius);box-shadow:inset 3px 0 0 #eef1f7;opacity:1}
+.log-list .card .card-hd{padding:14px 20px;display:flex;align-items:flex-start;gap:16px;min-height:0;transition:background var(--dur) var(--ease),border-radius var(--dur) var(--ease)}
 .log-list .card .card-hd .card-tools{margin-left:auto;display:flex;align-items:center;gap:8px}
-.log-list .card-bd{border-top:1px solid rgba(148,163,184,.35);padding:0 20px;background:rgba(248,250,252,.85)}
+.log-list .card-bd{border-top:1px solid rgba(148,163,184,.35);padding:0 20px;background:rgba(248,250,252,.85);transition:background var(--dur) var(--ease),border-color var(--dur) var(--ease)}
 .log-list .card.open .card-bd{border-bottom-left-radius:var(--log-card-radius);border-bottom-right-radius:var(--log-card-radius)}
 .log-list .card .bd-in{padding:18px 0 20px}
 .log-list .card .edit-form{padding:18px 0 24px}
